--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==2.2.2
 lightgbm==3.3.3
 matplotlib==3.6.2
 numpy==1.23.5
-pandas<1.5.2
+pandas==1.5.2
 plotly==5.11.0
 requests==2.28.1
 scikit_learn==1.2.0
